--- a/NEWS
+++ b/NEWS
@@ -2,12 +2,14 @@ Overview of Changes in BEAST/BSE 0.4.2:
 
 * Moved BSE into its own thread
 * Added IDL based code generator [Stefan Westerfeld]
+* Added CSL driver to the PCM backends [Stefan Westerfeld]
 * Deployed new middleware layer
 * Major documentation generation improvements [Alper Ersoy]
 * Generate structure documentation [Timj, Alper]
 * Added documentation about Gtk+ GUI extensions
 * Made documentation browser navigatable
 * Imporved MIDI support
+* Added track editor to allow complex song arrangements
 * Major code cleanups, bug fixes and refactoring
 * Lots of GUI bug fixes, improvements and revamps
 * Bug fixes and major cleanups
