--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sun Feb 23 15:19:35 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-links-synthesis.texi: link update.
+
+	* docs/generated/Makefile.am (site-preview): new rule to build up
+	website content in ~/private_html/beast-preview/. so stuff can be
+	browsed before beast.gtk.org is updated.
+
 Fri Feb 21 22:24:43 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/site-news.texi: added a new website news entry sketching
