--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb 23 18:54:17 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/generated/css/default.css: darken title backgrounds somewhat and
+	make links non-greenish on hover.
+
 Sun Feb 23 15:19:35 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/site-links-synthesis.texi: link update.
