--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Sat Feb 22 17:10:34 2003  Tim Janik  <timj@gtk.org>
+
+	* bsesong.[hc]: added properties for song looping and exported
+	son gposition pointer, accompanied by a signal ::pointer-changed
+	for realtime updates.
+
+	* bsessequencer.[hc]: support song looping.
+
 Tue Feb 18 17:47:17 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bseautodoc.c bsebindata.c bseconstant.c bsecontextmerger.c
