--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 25 15:22:24 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-news.texi: provide link for CSL.
+
 Sat Feb 22 17:10:34 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstitemview.[hc]: virtualize set_container().
