--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar  7 03:37:47 2003  Tim Janik  <timj@gtk.org>
+
+	* bsesuper.[hc]: removed cruft. fix time types.
+
+	* bseutils.[hc]: removed already replaced timing functions.
+
 Thu Mar  6 05:59:44 2003  Tim Janik  <timj@gtk.org>
 
 	* bsetrack.c: removed ::part property hack.
