--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Fri Mar  7 14:52:43 2003  Tim Janik  <timj@gtk.org>
+
+	* *.[hc]: removed old debugging cruft. switched things over
+	to SFI debugging functions.
+	
+	* bsemain.c: debugging options revamp.
+	
 Fri Mar  7 03:37:47 2003  Tim Janik  <timj@gtk.org>
 
 	* bsesuper.[hc]: removed cruft. fix time types.
