--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar  7 21:44:24 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsetype.c: adapted sfidl_xxx macros to pspec group support
+
 Fri Mar  7 14:52:43 2003  Tim Janik  <timj@gtk.org>
 
 	* *.[hc]: removed old debugging cruft. switched things over
