--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar  9 07:03:49 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* beast-gtk/bstrecords.sfidl: added group supported by sfidl now
+
 Fri Mar  7 21:45:13 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bstutils.c: adapted sfidl_xxx macros to pspec group support.
