--- a/TODO
+++ b/TODO
@@ -1,4 +1,10 @@
 FIXMES:
+- fix engine deinitialization assertions in bseserver.c
+- match enum names on word boundaries only
+- master tune slider in preferences (kammer ton)
+- bst_gmask should use typedef struct _BstGMask BstGMask; instead of gpointer
+- fix usage of serif fonts in sans-serif dialogs
+- bsemididevice-oss throws warnings when compiled without midi support
 - typed record serialization needs to honour indent for sfi_value_store_param()
 - serialization of homogeneous sequences could store the field type code only once
 - storage: data pocket: use typed serialization instead of #-hack for generic values
@@ -8,55 +14,35 @@ FIXMES:
 - gxk_toolbar_append_stock() and bst_radio_tools_add_stock_tool() need context help id
 - open() may return -EINVAL (e.g. for non-readable cards),
   we shouldn't map that onto BSE_ERROR_INTERNAL
-- CSL driver has a prio higher than OSS? leads to no device being
-  found, though OSS could be found?
 - fix piano roll [VH]PANEL_BG_GC() usage and GDK_Escape (ala trackroll)
-- use one global ID allocator
 - add IDs to part links in tracks
 - alow snet flagging as aggregate
 - add project_get_wave_snet
-- add developer option
 - show aggregates with BST_DEVEL
-- document -: f-fatal +p-plugins +s-scripts d-develext g-gdb
 - allow .bse files to start out with #bseshell ?
 - rename bswshell to bseshell
-- implement object uname changes parser lookup table
-- nuke g_datalist usages
 - update /Help index to cover new docs
 - insensitive gmasks should keep xframes sensitive for tooltips and rackeditor
 - export item seqid as readonly property (doesn't need its own notification signal then)
-- fix context handle ids to be >0 and not use ~0 anymore
 - fix name of BSE_SNET_FLAG_USER_SYNTH
 - merge snet specifics down to super
-- generalize snet id allocator
-- fix usage of serif fonts in sans-serif dialogs
 - registering the same script function twice triggers GType assertion
 - fix procbrowser
 - fix uses of gsl_engine_tick_stamp_from_systime() in bstwaveeditor.c
-- bst_gmask should use typedef struct _BstGMask BstGMask; instead of gpointer
 - handle non-validated sequences and records in generation code (things
   can be demarshalled in non-validated form after incompatible changes)
 - cleanup helper/util code in sfitype.h
 - choice type should have validation function
-- match enum names on word boundaries only
-- fix bseutils.c:bse_note_sequence_copy_deep()
 - does BseMidiIController need a MIDI channel property?
 - use procedure storage for undo or nuke the code
 - (bsw-script-set-msg 'e "huhu") BSE-Message: while executing "bse-script-set-msg": Procedure execution failed
-- bsemididevice-oss throws warnings when compiled without midi support
 - song->master volume doesn't affect anything
 - fix and canonify decibell naming everywhere
 - need volume properties per track
 - pressing browsing hotkeys in release-notes dialog does stuff
-- check whether preference boundary values still cause assertions
 - sample chunk display should show note names not only midi notes
-- bstusermessage.c:user_message() signal handler takes choice argument fix connections
-- fix engine deinitialization assertions in bseserver.c
+- bstusermessage.c:user_message() signal handler takes choice argument, fix connections
 - support [-- Raw --- (big/little) (c=2) (mix=44100) (8/12/16/32) ---] box in wave loader dialog
-- master tune slider in preferences (kammer ton)
-
-URGENT:
-- support pspec groups in idl files [stw]
 
 DOCS:
 - try implementing some kind of table layout for tsmview [timj]
@@ -73,31 +59,30 @@ DOCS:
 
 GSL:
 * sample loader currently hard codes 440.0 for osc_freq
-- [stw]      ?	LP -> LP transforms or zero/poles
-- [stw]      2h	3-stage joining FFT code
-- [stw]      ?h /usr/share/doc/sfftw-dev/README.hacks
-- [stw]      ?h	FFT L-case optimiaztions
-- [stw/timj] 2h	CSL: csl_select() completion
-- [stw/timj] 2h	Filter boundary conditions?
-		Also, need 2stage filters with way smaller errors
-		Filter: Oppenheim Schaefer page.441 2stage filters implementation
+  Person        S T
+- [stw]		  9 LP -> LP transforms or zero/poles
+- [stw]      	  8 3-stage joining FFT code
+- [stw]             /usr/share/doc/sfftw-dev/README.hacks
+- [stw]      	  7 FFT L-case optimiaztions
+- [stw]           1 .PAT loader (move)
+- [stw/timj] 	  3 1) OscTableEntry sizes (wave_table_size ())
+- [stw/timj] 	  3 2) development of gsl_osc_table_create() frequencies
+- [stw/timj] 	  4 3) PWM scaling
+- [stw/timj] 	  6 Filter boundary conditions?
+		    Also, need 2stage filters with way smaller errors
+		    Filter: Oppenheim Schaefer page.441 2stage filters implementation
 		        (2stage pair finding by single (zero, pole) pair plus
 		        conj. complex pair)
-- [timj]     ?h	Buffered data handles for coarse seek
-- [timj]     ?	WaveOsc: prop for stereo channel
-- [timj]     ?	API for lp/hp/bp/bs generation from array of roots and poles
-		(requires zero and poles with ->im != 0 to occour in
-		conjugated complex pairs)
-- [timj]     ?	in API and docs, s/roots/zeros/
-- [timj]     ?	gsltests: change freq input, so that [0..1] => [0..pi]
-- [timj]     ?	gsltest: swap epsilon and steepness params for t2* filters
-- [timj]     ?	Async DCache read-ahead thread creation
-- [timj]     ?	filter evaluate function (to draw graph)
-- [stw/timj] 2h	GUI abstraction layer
-- [stw]      ?	.PAT loader (move)
-- [stw/timj] ?h	1) OscTableEntry sizes (wave_table_size ())
-- [stw/timj] ?h	2) development of gsl_osc_table_create() frequencies
-- [stw/timj] ?h	3) PWM scaling
+- [timj]     	    Buffered data handles for coarse seek
+- [timj]            WaveOsc: prop for stereo channel
+- [timj]         9  API for lp/hp/bp/bs generation from array of roots and poles
+		    (requires zero and poles with ->im != 0 to occour in
+		    conjugated complex pairs)
+- [timj]            in API and docs, s/roots/zeros/
+- [timj]            gsltests: change freq input, so that [0..1] => [0..pi]
+- [timj]            gsltest: swap epsilon and steepness params for t2* filters
+- [timj]         6  Async DCache read-ahead thread creation
+- [timj]         5  filter evaluate function (to draw graph)
 
 Snet Router:
 - ctrl+move should clone objects (DND style modifier) 
