--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 10 06:18:51 2003  Tim Janik  <timj@gtk.org>
+
+	* sficomport.[hc]: debugging cleanup.
+
 Sun Mar  9 14:45:50 2003  Tim Janik  <timj@gtk.org>
 
 	* sfidl.cc: added NULL guards to value transforms.
