rename and CVS-move of bsw-shell/bswshell to shell/bsesh.
Mon Mar 10 05:43:37 2003  Tim Janik  <timj@gtk.org>

        * rename and CVS-move of bsw-shell/bswshell to shell/bsesh.

        * shell/bsescminterp.h: moved here from bsw-shell/bswscminterp.h.
        * shell/bsescminterp.c: moved here from bsw-shell/bswscminterp.c.
        * shell/bsesh.c: moved here from bsw-shell/bswshell.c.

        * shell/test.scm:
        * shell/Makefile.am:
        * shell/record-midi.scm:
        * shell/bse-scm-glue.boot:
        * shell/progressor-example.scm: moved here from bsw-shell/.

        * bse/bsescripthelper.c:
        * configure.in:
        * Makefile.am:
        * shell/*: adaptions to renames.

svn path=/trunk/; revision=962

--- a/TODO
+++ b/TODO
@@ -19,8 +19,7 @@ FIXMES:
 - alow snet flagging as aggregate
 - add project_get_wave_snet
 - show aggregates with BST_DEVEL
-- allow .bse files to start out with #bseshell ?
-- rename bswshell to bseshell
+- allow .bse files to start out with #bsesh ?
 - update /Help index to cover new docs
 - insensitive gmasks should keep xframes sensitive for tooltips and rackeditor
 - export item seqid as readonly property (doesn't need its own notification signal then)
