--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+Mon Mar 10 05:43:37 2003  Tim Janik  <timj@gtk.org>
+
+	* rename and CVS-move of bsw-shell/bswshell to shell/bsesh.
+
+	* shell/bsescminterp.h: moved here from bsw-shell/bswscminterp.h.
+	* shell/bsescminterp.c: moved here from bsw-shell/bswscminterp.c.
+	* shell/bsesh.c: moved here from bsw-shell/bswshell.c.
+
+	* shell/test.scm:
+	* shell/Makefile.am:
+        * shell/record-midi.scm:
+	* shell/bse-scm-glue.boot:
+	* shell/progressor-example.scm: moved here from bsw-shell/.
+
+	* bse/bsescripthelper.c:
+	* configure.in:
+	* Makefile.am:
+	* shell/*: adaptions to renames.
+
 Sun Mar  9 15:44:48 2003  Tim Janik  <timj@gtk.org>
 
 	* TODO: got rid of a good chunk of fixmes.
