--- a/TODO
+++ b/TODO
@@ -59,29 +59,29 @@ DOCS:
 GSL:
 * sample loader currently hard codes 440.0 for osc_freq
   Person        S T
-- [stw]		  9 LP -> LP transforms or zero/poles
-- [stw]      	  8 3-stage joining FFT code
-- [stw]             /usr/share/doc/sfftw-dev/README.hacks
-- [stw]      	  7 FFT L-case optimiaztions
-- [stw]           1 .PAT loader (move)
-- [stw/timj] 	  3 1) OscTableEntry sizes (wave_table_size ())
-- [stw/timj] 	  3 2) development of gsl_osc_table_create() frequencies
-- [stw/timj] 	  4 3) PWM scaling
-- [stw/timj] 	  6 Filter boundary conditions?
+- [stw]		2 9 LP -> LP transforms or zero/poles
+- [stw]      	1 8 3-stage joining FFT code
+- [stw]         4   /usr/share/doc/sfftw-dev/README.hacks
+- [stw]      	1 7 FFT L-case optimiaztions
+- [stw]         5 1 .PAT loader (move)
+- [stw/timj] 	6 3 1) OscTableEntry sizes (wave_table_size ())
+- [stw/timj] 	7 3 2) development of gsl_osc_table_create() frequencies
+- [stw/timj] 	4 4 3) PWM scaling
+- [stw/timj] 	6 6 Filter boundary conditions?
 		    Also, need 2stage filters with way smaller errors
 		    Filter: Oppenheim Schaefer page.441 2stage filters implementation
 		        (2stage pair finding by single (zero, pole) pair plus
 		        conj. complex pair)
-- [timj]     	    Buffered data handles for coarse seek
-- [timj]            WaveOsc: prop for stereo channel
-- [timj]         9  API for lp/hp/bp/bs generation from array of roots and poles
+- [timj]       9    Buffered data handles for coarse seek
+- [timj]       8    WaveOsc: prop for stereo channel
+- [timj]       2 9  API for lp/hp/bp/bs generation from array of roots and poles
 		    (requires zero and poles with ->im != 0 to occour in
 		    conjugated complex pairs)
-- [timj]            in API and docs, s/roots/zeros/
-- [timj]            gsltests: change freq input, so that [0..1] => [0..pi]
-- [timj]            gsltest: swap epsilon and steepness params for t2* filters
-- [timj]         6  Async DCache read-ahead thread creation
-- [timj]         5  filter evaluate function (to draw graph)
+- [timj]       6    in API and docs, s/roots/zeros/
+- [timj]       4    gsltests: change freq input, so that [0..1] => [0..pi]
+- [timj]       5    gsltest: swap epsilon and steepness params for t2* filters
+- [timj]       7 6  Async DCache read-ahead thread creation
+- [stw/timj]   6 5  filter evaluate function (to draw graph)
 
 Snet Router:
 - ctrl+move should clone objects (DND style modifier) 
