--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- update release notes
+- add demo song
 - fix all test files
 - add configure option for devices
 - fix .bse file version number
